add file huddle + profile card + single grid

--- a/Profile card component/index.html
+++ b/Profile card component/index.html
@@ -11,12 +11,12 @@
 </head>
 <body>
     <div class="profile">
-        <img src="/profile-card-component-main/images/bg-pattern-top.svg" alt="" class="circle-top">
-        <img src="/profile-card-component-main/images/bg-pattern-bottom.svg" alt="" class="circle-bottom">
+        <img src="/Profile card component/profile-card-component-main/images/bg-pattern-top.svg" alt="" class="circle-top">
+        <img src="/Profile card component/profile-card-component-main/images/bg-pattern-bottom.svg" alt="" class="circle-bottom">
         <div class="profile-box">
             <div class="top">
-                <img src="/profile-card-component-main/images/bg-pattern-card.svg" alt="" class="bg-img">
-                <img src="/profile-card-component-main/images/image-victor.jpg" class="author-img">
+                <img src="/Profile card component/profile-card-component-main/images/bg-pattern-card.svg" alt="" class="bg-img">
+                <img src="/Profile card component/profile-card-component-main/images/image-victor.jpg" class="author-img">
             </div>
             <div class="content">
                 <p class="name"> VictorCrest </p><span>26</span>
