fix file fylo dark

--- a/Fylo dark theme landing page/index.html
+++ b/Fylo dark theme landing page/index.html
@@ -175,7 +175,9 @@
                             <div class="adress-img">
                                 <img src="./fylo-dark-theme-landing-page-master/images/icon-location.svg" alt="">
                             </div>
-                            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+                            <div class="address-text">
+                                <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+                        </div>
                         </div>
                         <div class="footer-contact">
                             <div class="contact-item">
